--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "rangeStrategy": "update-lockfile"
+  "rangeStrategy": "update-lockfile",
+  "enabledManagers": [
+    "mix"
+  ]
 }
