--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "rangeStrategy": "update-lockfile",
-  "enabledManagers": [
-    "mix"
-  ]
+  "rangeStrategy": "pin",
+  "enabledManagers": ["mix"]
 }
