--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "rangeStrategy": "pin",
+  "rangeStrategy": "update-lockfile",
   "enabledManagers": ["mix"]
 }
