--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "rangeStrategy": "bump",
-  "enabledManagers": ["mix"]
+  "enabledManagers": ["mix"],
+  "prHourlyLimit": 100
 }
