--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "rangeStrategy": "update-lockfile",
+  "rangeStrategy": "in-range-only",
   "enabledManagers": ["mix"],
   "prHourlyLimit": 100
 }
